fixing the marging and padding as well as aligning different component

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-*{
-  margin:0;
-}
 
 .post_image{
   object-fit: contain;
@@ -25,8 +22,8 @@
 
 .card-body{
   display: flex;
-  min-height: 120vh;
-  image-resolution: 240px,360px;
+  min-height: 100vh;
+  image-resolution: 240px,1080px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
